<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backround1"
    android:padding="15dp"
    android:layout_gravity="center"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_name"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vUser"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/txtView"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_hint"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/vUser"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vUserPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass_hint"
                    android:textSize="20dp"
                    android:inputType="textPassword"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:layout_below="@+id/vPass"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

            <TextView
                android:id="@+id/vRecordar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vrecordar"
                android:textColor="@color/white"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:clickable="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_crear"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="40dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>