<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background2"
    android:padding="15dp"
    android:layout_gravity="center"
    tools:context=".WriteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vWrite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vWrite"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/vWrite"
                android:textColorHint="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_newspaper_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vNewsTittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newsTitle_hint"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtBody"
                android:layout_width="match_parent"
                android:text="Cuerpo Noticia"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:layout_below="@+id/vTitle"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vBody"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/txtBody">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vBodyNews"
                    android:layout_width="match_parent"
                    android:layout_height="470dp"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="20dp"
                    android:gravity="top"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnContinuar"
                android:layout_below="@+id/vBody"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>